--- a/commander-cheap-mattress.html
+++ b/commander-cheap-mattress.html
@@ -7,30 +7,29 @@
     <style>
         /* CSS for styling */
         body {
-            /* Gradient background from burgundy red to salmon pink */
             background: linear-gradient(135deg, #800020, #FA8072);
-            min-height: 100vh; /* Ensure the gradient covers the full viewport height */
+            min-height: 100vh;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Georgia', serif; /* A professional but warm font */
-            color: #333; /* Dark text for readability */
+            font-family: 'Comic Sans', serif; 
+            color: #333;
         }
 
         .content-box {
-            background-color: rgba(255, 255, 255, 0.95); /* Nearly opaque white box */
+            background-color: rgba(255, 255, 255, 0.95);
             padding: 40px;
-            border-radius: 15px; /* Rounded corners for a softer, cuter look */
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+            border-radius: 15px; 
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); 
             text-align: center;
             max-width: 600px;
             width: 90%;
-            border: 2px solid #800020; /* A border matching the darker color for definition */
+            border: 2px solid #800020;
         }
 
         h1 {
-            color: #800020; /* Burgundy red heading color */
+            color: #800020; 
             font-size: 2.5em;
             margin-bottom: 10px;
         }
@@ -38,7 +37,7 @@
         .subtitle {
             font-style: italic;
             margin-bottom: 30px;
-            color: #FA8072; /* Salmon pink for a cute touch */
+            color: #FA8072; 
             font-size: 1.1em;
         }
 
@@ -47,8 +46,8 @@
             line-height: 1.6;
             color: #555;
             padding: 20px;
-            border: 1px dashed #FA8072; /* Dashed line for a soft, informal element */
-            background-color: #fff0f0; /* Very light pink background for the text */
+            border: 1px dashed #FA8072; 
+            background-color: #fff0f0; 
             border-radius: 8px;
         }
 
@@ -61,7 +60,7 @@
         .heart {
             color: #800020;
             font-size: 1.5em;
-            animation: pulse 1.5s infinite; /* Cute animation */
+            animation: pulse 1.5s infinite;
         }
 
         /* Keyframe animation for the heart pulse effect */
@@ -75,18 +74,18 @@
 <body>
 
     <div class="content-box">
-        <h1>Welcome, Dr. Ivan Toftul!</h1>
-        <div class="subtitle">A dedicated resource from your gremlin girlfriend. <span class="heart">💖</span></div>
+        <h1>Privyet, you distraction of a man</h1>
+        <div class="subtitle">A dedicated resource from your gremlin girlfriend compiled against my own will. <span class="heart">💖</span></div>
 
         <p>
             **To be filled with information for Ivan's knowledge only.**
             <br>
-            Content to be researched and discussed.
+            Content TBD. Currently compiling resources and information.
         </p>
 
         <div class="signature">
-            *Always and forever yours,*<br>
-            Your favorite gremlin. 
+            *I wonder what your fart smells like. Might be bad,*<br>
+            Your favorite donkey
         </div>
     </div>
 
