commander-cheap-mattress.html

--- a/commander-cheap-mattress.html
+++ b/commander-cheap-mattress.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Comic Sans', serif; 
+            font-family: "Comic Sans MS", "Comic Sans", cursive;
             color: #333;
         }
 
@@ -35,7 +35,6 @@
         }
 
         .subtitle {
-            font-style: italic;
             margin-bottom: 30px;
             color: #FA8072; 
             font-size: 1.1em;
@@ -86,6 +85,10 @@
         <div class="signature">
             *I wonder what your fart smells like. Might be bad,*<br>
             Your favorite donkey
+		
+		<div>
+		<img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUycHpuNjVsenRwdndobWtudjRlMHp5cWlsNDBvYmhndGU5cmlpYnFiNiZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/1YcLOSW6JCNdsfSr5E/source.gif" width="100" height="100">
+		</div>
         </div>
     </div>
 
