--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Claudemund's Bullshit Repository</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="https://media.tenor.com/lGdck5vg7CYAAAAm/pisica-cat.webp"/>
 
-<!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  I love coffee frappe
 </p>
 <p>
-  Sean made a change
+  ya
 </p>
 
 </body>
